--- a/Simulador_Interactivo/index.html
+++ b/Simulador_Interactivo/index.html
@@ -27,7 +27,7 @@
                 <input class="main__contenedor__input" type="text" id="numEntrada" placeholder="Ingrese número"/>
                 <div class="main__contenedor__radio">
                     <label class="main__contenedor__radio__label" for="binario">binario</label>
-                    <input class="main__contenedor__radio__input" type="radio" id="binario" name="baseSalida" value="2">
+                    <input class="main__contenedor__radio__input" type="radio" id="binario" name="baseSalida" value="2" checked>
                     <label class="main__contenedor__radio__label" for="octal">octal</label>
                     <input class="main__contenedor__radio__input" type="radio" id="octal" name="baseSalida" value="8">
                 </div>
