--- a/Proyecto_Final/index.html
+++ b/Proyecto_Final/index.html
@@ -56,13 +56,13 @@
                     <!-- menú para seleccionar productos que se quieren comprar-->
                     <div class="mb-3 main__contenedor__menu">
                         <select class="form-select form-select-sm main__contenedor__menu__select" id="menuProductos" aria-label="menu-productos">
-                            <option selected="">Productos disponibles</option>
                         </select>
                     </div>
                     <!--botón carrito-->
                     <button type="button" id="btnAgregar" class="btn btn-outline-danger main__contenedor__btn">agregar al carrito</button>
                     <!--para avisar que se agregó producto al carrito-->
                     <label class="main__contenedor__lblResultado" id="resultado"></label>
+                    <div class="d-flex gap-4 flex-row justify-content-center" id="compra"></div>
                 </div>
                 <img class="img-fluid main__contenedor__banner" src="./assets/img/Banner1.jpg" alt="banner-zapatilla-NB-327">
             </div>
