--- a/Proyecto_Final/index.html
+++ b/Proyecto_Final/index.html
@@ -48,9 +48,10 @@
         </header>
         <main class="row main">
             <div class="col main__contenedor">
-                 <!--alerta-->
-                 <div class="alert alert-success alert-dismissible fade show alerta" role="alert">Envío GRATIS a partir de $14999
-                     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Cerrar"></button>
+                <img class="img-fluid main__contenedor__bannerPrincipal" src="./assets/img/Banner-Principal.jpg" alt="banner-zapatillas">
+                <!--alerta-->
+                <div class="alert alert-success alert-dismissible fade show alerta" role="alert">Envío GRATIS a partir de $14999
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Cerrar"></button>
                 </div>
                 <div class="d-flex flex-column justify-content-center" id="contenedorCarrito">
                     <!-- menú para seleccionar productos que se quieren comprar-->
