--- a/Proyecto_Final/index.html
+++ b/Proyecto_Final/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--Librería animaciones-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,13 +35,13 @@
                         <div class="collapse navbar-collapse" id="navbarCollapse">
                             <ul class="navbar-nav me-auto mb-2 mb-md-0">
                                 <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="#">Calzado</a>
+                                    <a class="nav-link active hvr-underline-from-left" aria-current="page" href="#">Calzado</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="#">Indumentaria</a>
+                                    <a class="nav-link active hvr-underline-from-left" aria-current="page" href="#">Indumentaria</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="#">Novedades</a>
+                                    <a class="nav-link active hvr-underline-from-left" aria-current="page" href="#">Novedades</a>
                                 </li>
                             </ul>
                         </div>
@@ -73,6 +76,10 @@
                 <p class="footer_contendor__text">© 2022 - Gabriel Ignacio Paez</p>
             </div>
         </footer>
+        <!--librería AOS-->
+        <script>
+            AOS.init();
+        </script>
         <!-- JS Bootstrap -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
         </script>  
