se agregó template html y corrección en cálculo de cuotas

--- a/Proyecto_Final/index.html
+++ b/Proyecto_Final/index.html
@@ -60,6 +60,9 @@
                     <!-- menú para seleccionar productos que se quieren comprar-->
                     <div class="mb-3 main__contenedor__menu">
                         <select class="form-select form-select-sm main__contenedor__menu__select" id="menuProductos" aria-label="menu-productos">
+                            <template id="template-option">
+                                <option>${producto}</option>
+                            </template>
                         </select>
                     </div>
                     <!--botón carrito-->
