se lee de archivo .json y se cargan las cards de los productos en el sitio

--- a/Proyecto_Final/index.html
+++ b/Proyecto_Final/index.html
@@ -56,21 +56,21 @@
                 <div class="alert alert-success alert-dismissible fade show alerta" role="alert">Envío GRATIS a partir de $14999
                     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Cerrar"></button>
                 </div>
-                <div class="d-flex flex-column justify-content-center" id="contenedorCarrito">
-                    <!-- menú para seleccionar productos que se quieren comprar-->
-                    <div class="mb-3 main__contenedor__menu">
-                        <select class="form-select form-select-sm main__contenedor__menu__select" id="menuProductos" aria-label="menu-productos">
-                            <template id="template-option">
-                                <option>${producto}</option>
-                            </template>
-                        </select>
+                <div class="d-flex gap-4 flex-column justify-content-center mt-4" id="compra"></div>
+                <!--contenedor de productos -->
+                <div class="row" id="items"></div>
+                <template id="template-card">
+                    <div class="col-12 col-md-4 col-xxl-6 mt-2 mb-4">
+                        <div class="card">
+                            <img src="" class="card-img-top" alt="imágen producto">
+                            <div class="card-body">
+                                <h5 class="card-title">Título</h5>
+                                <p class="card-text">Precio</p>
+                                <button class="btn btn-dark">Comprar</button>
+                            </div>
+                        </div>
                     </div>
-                    <!--botón carrito-->
-                    <button type="button" id="btnAgregar" class="btn btn-outline-danger main__contenedor__btn">agregar al carrito</button>
-                    <!--para avisar que se agregó producto al carrito-->
-                    <label class="main__contenedor__lblResultado" id="resultado"></label>
-                    <div class="d-flex gap-4 flex-row justify-content-center" id="compra"></div>
-                </div>
+                </template>
                 <img class="img-fluid main__contenedor__banner" src="./assets/img/Banner1.jpg" alt="banner-zapatilla-NB-327">
             </div>
         </main>
