--- a/Proyecto_Final/index.html
+++ b/Proyecto_Final/index.html
@@ -23,6 +23,30 @@
     <link rel="stylesheet" href="./css/styles.css"/>
 </head>
 <body>
+    <!-- offcanvas-->
+    <div class="offcanvas offcanvas-end" tabindex="-1" id="offCanvasCarrito" aria-labelledby="offCanvasLabel">
+        <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offCanvasLabel">Carrito de compras</h5>
+            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Cerrar"></button>
+        </div>
+        <div class="offcanvas-body">
+            <!--<div>Tu compra</div>-->
+            <div class="mt-3">
+                <div id="infoCarrito">
+                    <div class ="d-flex flex-column gap-2" id="infoCarritoMain"></div>
+                    <div class="d-flex flex-column gap-2" id="infoCarritoFooter">
+                        Carrito vacío
+                        <!-- template para las cuotas disponibles -->
+                      <!--  <template id="template-option">
+                            <option>${producto}</option>
+                        </template>-->
+                      <!-- <button class="btn btn-success mx-auto" type="button" id="botonComprar">finalizar compra</button> -->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> 
+    <!--fin offcanvas-->
     <div class="container_fluid">
         <header class="row header">
             <div class="col header__contenedor">
@@ -44,6 +68,7 @@
                                     <a class="nav-link active hvr-underline-from-left" aria-current="page" href="#">Novedades</a>
                                 </li>
                             </ul>
+                            <a class="navbar-brand header__contenedor__carrito" data-bs-toggle="offcanvas" href="#offCanvasCarrito" role="button" aria-controls="offCanvasCarrito">MiCarrito</a>
                         </div>
                     </div>
                 </nav>
@@ -56,7 +81,7 @@
                 <div class="alert alert-success alert-dismissible fade show alerta" role="alert">Envío GRATIS a partir de $14999
                     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Cerrar"></button>
                 </div>
-                <div class="d-flex gap-4 flex-column justify-content-center mt-4" id="compra"></div>
+            <!--<div class="d-flex gap-4 flex-column justify-content-center mt-4" id="compra"></div>-->
                 <!--contenedor de productos -->
                 <div class="row" id="items"></div>
                 <template id="template-card">
@@ -65,6 +90,7 @@
                             <img src="" class="card-img-top" alt="imágen producto">
                             <div class="card-body">
                                 <h5 class="card-title">Título</h5>
+                                <h6 class="card-text">Cant.disponible:</h6>
                                 <p class="card-text">Precio</p>
                                 <button class="btn btn-dark">Comprar</button>
                             </div>
