se agregaron botones para modificar la cantidad de cada producto en el carrito

--- a/Proyecto_Final/index.html
+++ b/Proyecto_Final/index.html
@@ -92,7 +92,7 @@
                                 <h5 class="card-title">Título</h5>
                                 <h6 class="card-text">Cant.disponible:</h6>
                                 <p class="card-text">Precio</p>
-                                <button class="btn btn-dark">Comprar</button>
+                                <button class="btn btn-dark">agregar al carrito</button>
                             </div>
                         </div>
                     </div>
