--- a/Proyecto_Final/index.html
+++ b/Proyecto_Final/index.html
@@ -25,9 +25,9 @@
 <body>
     <!-- offcanvas-->
     <div class="offcanvas offcanvas-end" tabindex="-1" id="offCanvasCarrito" aria-labelledby="offCanvasLabel">
-        <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offCanvasLabel">Carrito de compras</h5>
-            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Cerrar"></button>
+        <div class="offcanvas-header bg-dark">
+            <h5 class="offcanvas-title text-white" id="offCanvasLabel">Carrito de compras</h5>
+            <button type="button" class="btn-close btn-close-white text-reset" data-bs-dismiss="offcanvas" aria-label="Cerrar"></button>
         </div>
         <div class="offcanvas-body">
             <!--<div>Tu compra</div>-->
@@ -36,11 +36,6 @@
                     <div class ="d-flex flex-column gap-2" id="infoCarritoMain"></div>
                     <div class="d-flex flex-column gap-2" id="infoCarritoFooter">
                         Carrito vacío
-                        <!-- template para las cuotas disponibles -->
-                      <!--  <template id="template-option">
-                            <option>${producto}</option>
-                        </template>-->
-                      <!-- <button class="btn btn-success mx-auto" type="button" id="botonComprar">finalizar compra</button> -->
                     </div>
                 </div>
             </div>
@@ -81,12 +76,11 @@
                 <div class="alert alert-success alert-dismissible fade show alerta" role="alert">Envío GRATIS a partir de $14999
                     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Cerrar"></button>
                 </div>
-            <!--<div class="d-flex gap-4 flex-column justify-content-center mt-4" id="compra"></div>-->
                 <!--contenedor de productos -->
                 <div class="row" id="items"></div>
                 <template id="template-card">
                     <div class="col-12 col-md-4 col-xxl-6 mt-2 mb-4">
-                        <div class="card">
+                        <div class="card shadow bg-body rounded">
                             <img src="" class="card-img-top" alt="imágen producto">
                             <div class="card-body">
                                 <h5 class="card-title">Título</h5>
