--- a/Proyecto_Final/index.html
+++ b/Proyecto_Final/index.html
@@ -30,11 +30,10 @@
             <button type="button" class="btn-close btn-close-white text-reset" data-bs-dismiss="offcanvas" aria-label="Cerrar"></button>
         </div>
         <div class="offcanvas-body">
-            <!--<div>Tu compra</div>-->
             <div class="mt-3">
                 <div id="infoCarrito">
                     <div class ="d-flex flex-column gap-2" id="infoCarritoMain"></div>
-                    <div class="d-flex flex-column gap-2" id="infoCarritoFooter">
+                    <div class="d-flex flex-column gap-2 text-center fs-4" id="infoCarritoFooter">
                         Carrito vacío
                     </div>
                 </div>
